Fix horizontal scroll on mobile

--- a/css/head.scss
+++ b/css/head.scss
@@ -45,7 +45,7 @@ body {
   padding-bottom: 60px;
 
   &__body {
-    width: 960px;
+    max-width: 960px;
     margin: 0 auto;
 
     margin-top: 30px;
@@ -444,6 +444,9 @@ img.emoji {
 }
 
 .project {
+  display: flex;
+  flex-direction: column;
+
   &__thumbnail {
     width: 100%;
     height: 200px;
@@ -484,6 +487,7 @@ img.emoji {
 
   &__menu {
     display: flex;
+    margin-top: auto;
   }
 
   &__menu-link {
@@ -563,5 +567,9 @@ img.emoji {
       margin-left: 0;
       margin-top: 20px;
     }
+  }
+
+  .project {
+    width: 100%;
   }
 }
